@@ -142,6 +142,7 @@ LOG_TYPE( AA, ERROR, ENABLED )
 LOG_TYPE( AA, MESSAGE, DISABLED )
 LOG_TYPE( AA, IN, DISABLED )
 LOG_TYPE( AA, OUT, DISABLED )
+LOG_TYPE( AA, BONUSES, DISABLED )
 
 
 LOG_CATEGORY( DOORS )
